--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="img-content">
         <img src="img/fun-bus.jpg" alt="Welcome to the fun bus!">
       </div>
-      <div class="text-container">
+      <div class="text-content">
         <h2>Welcome to Fun Bus!</h2>
         <p>Traveling expedition modern, clean webdesin blogger clean website theme website modern. Design preety design,
           travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure
@@ -77,7 +77,7 @@
       <img src="img/destination.jpg" alt="Second slide">
     </section>
     <section class="content-pick">
-      
+
       <div class="destination">
         <h4>Fun In The Sun</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign.
